<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/video_enhancer_title">

    <!-- Display Features Category -->
    <PreferenceCategory android:title="@string/video_enhancer_display_category">
        
        <SwitchPreference
            android:key="smooth_motion_enabled"
            android:title="@string/smooth_motion_enable_title"
            android:summary="@string/smooth_motion_enable_summary"
            android:defaultValue="false" />
        
        <SwitchPreference
            android:key="optimize_refresh_enabled"
            android:title="@string/optimize_refresh_enable_title"
            android:summary="@string/optimize_refresh_enable_summary"
            android:defaultValue="false" />
        
        <SwitchPreference
            android:key="peak_refresh_rate_enabled"
            android:title="@string/peak_refresh_rate_title"
            android:summary="@string/peak_refresh_rate_summary"
            android:defaultValue="false" />
        
    </PreferenceCategory>

    <!-- Performance Optimizations Category -->
    <PreferenceCategory android:title="@string/video_enhancer_performance_category">
        
        <SwitchPreference
            android:key="force_vulkan_enabled"
            android:title="@string/force_vulkan_title"
            android:summary="@string/force_vulkan_summary"
            android:defaultValue="false" />
        
        <SwitchPreference
            android:key="purgeable_assets_enabled"
            android:title="@string/purgeable_assets_title"
            android:summary="@string/purgeable_assets_summary"
            android:defaultValue="false" />
        
        <SwitchPreference
            android:key="gfx_accel_enabled"
            android:title="@string/gfx_accel_title"
            android:summary="@string/gfx_accel_summary"
            android:defaultValue="true" />
        
        <SwitchPreference
            android:key="adpf_cpu_hint_enabled"
            android:title="@string/adpf_cpu_hint_title"
            android:summary="@string/adpf_cpu_hint_summary"
            android:defaultValue="true" />
        
        <SwitchPreference
            android:key="gpu_scheduling_enabled"
            android:title="@string/gpu_scheduling_title"
            android:summary="@string/gpu_scheduling_summary"
            android:defaultValue="false" />
        
    </PreferenceCategory>

    <!-- Hardware Renderer Category -->
    <PreferenceCategory android:title="@string/video_enhancer_renderer_category">
        
        <SwitchPreference
            android:key="skiagl_renderer_enabled"
            android:title="@string/skiagl_renderer_title"
            android:summary="@string/skiagl_renderer_summary"
            android:defaultValue="false" />
        
        <SwitchPreference
            android:key="skiavk_renderer_enabled"
            android:title="@string/skiavk_renderer_title"
            android:summary="@string/skiavk_renderer_summary"
            android:defaultValue="false" />
        
    </PreferenceCategory>

    <!-- Advanced Features Category -->
    <PreferenceCategory android:title="@string/video_enhancer_advanced_category">
        
        <SwitchPreference
            android:key="hwui_force_gpu_enabled"
            android:title="@string/hwui_force_gpu_title"
            android:summary="@string/hwui_force_gpu_summary"
            android:defaultValue="false" />
        
        <SwitchPreference
            android:key="hwui_disable_vsync"
            android:title="@string/hwui_disable_vsync_title"
            android:summary="@string/hwui_disable_vsync_summary"
            android:defaultValue="false" />
        
        <SwitchPreference
            android:key="disable_scaler_enabled"
            android:title="@string/disable_scaler_title"
            android:summary="@string/disable_scaler_summary"
            android:defaultValue="false" />
        
        <SwitchPreference
            android:key="media_codec_hw_enabled"
            android:title="@string/media_codec_hw_title"
            android:summary="@string/media_codec_hw_summary"
            android:defaultValue="true" />
        
    </PreferenceCategory>

    <!-- Information & Reset Category -->
    <PreferenceCategory android:title="@string/video_enhancer_info_category">
        
        <Preference
            android:key="video_enhancer_info"
            android:title="@string/video_enhancer_info_title"
            android:summary="@string/video_enhancer_info_summary"
            android:icon="@android:drawable/ic_menu_info_details" />
        
        <Preference
            android:key="reset_to_defaults"
            android:title="@string/reset_to_defaults_title"
            android:summary="@string/reset_to_defaults_summary"
            android:icon="@android:drawable/ic_menu_revert" />
        
    </PreferenceCategory>

</PreferenceScreen>
