<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/cpu_tile_appearance_category">
        
        <ListPreference
            android:key="cpu_tile_size"
            android:title="@string/cpu_tile_size_title"
            android:summary="@string/cpu_tile_size_summary"
            android:entries="@array/cpu_tile_size_entries"
            android:entryValues="@array/cpu_tile_size_values"
            android:defaultValue="1" />

        <ListPreference
            android:key="cpu_tile_style"
            android:title="@string/cpu_tile_style_title"
            android:summary="@string/cpu_tile_style_summary"
            android:entries="@array/cpu_tile_style_entries"
            android:entryValues="@array/cpu_tile_style_values"
            android:defaultValue="0" />

        <SwitchPreference
            android:key="cpu_tile_show_percentage"
            android:title="@string/cpu_tile_show_percentage_title"
            android:summary="@string/cpu_tile_show_percentage_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/cpu_tile_behavior_category">

        <ListPreference
            android:key="cpu_tile_update_speed"
            android:title="@string/cpu_tile_update_speed_title"
            android:summary="@string/cpu_tile_update_speed_summary"
            android:entries="@array/cpu_tile_update_speed_entries"
            android:entryValues="@array/cpu_tile_update_speed_values"
            android:defaultValue="1000" />

        <Preference
            android:key="cpu_tile_preview"
            android:title="@string/cpu_tile_preview_title"
            android:summary="@string/cpu_tile_preview_summary" />

    </PreferenceCategory>

    <com.android.settingslib.widget.FooterPreference
        android:key="footer_preference"
        android:title="@string/cpu_tile_footer"
        android:selectable="false" />

</PreferenceScreen>
